# borrowed-cf-session

./: .gitignore  LICENSE  README.md
agda/: README.md  agda-safe.sh  borrowed-cf.agda-lib
agda/BorrowedCF/: Algorithmic.agda  Broken.agda  CloseVacuityProbe.agda  Context.agda  DescendAbs.agda  DescendK.agda  DiscardCheck.agda  DisproofPostulates.agda  DropAcqCounter.agda  FinKits.agda  FixBreaksDrop.agda  InnerHandleProbe.agda  Kits.agda  Modes.agda  Prelude.agda  Processes.agda  ProcessesInv.agda  RedexTypingProbe.agda  Reduction.agda  Renaming.agda  RsplitBisimIssue.agda  RsplitCounterexample.agda  RsplitDropTension.agda  RsplitFlipCheck.agda  RsplitFramedRedex.agda  (+12 more)
implementation/: README.md  flake.nix  opencode.json
supplement/: README.md
supplement/implementation/: .envrc  .gitignore  Cargo.toml  Dockerfile
supplement/implementation/examples/negative/: lsplitOnlySkips.bgv  sendNonMobile.bgv  unProcessedChannel.bgv  undefinedTypeAlias.bgv
supplement/implementation/examples/positive/: mathServer1Send.bgv  mathServer4Refactor.bgv  new_and_close.bgv  oldPaperBranching.bgv  oldPaperForward.bgv  oldPaperHigherOrder.bgv  oldPaperThreads.bgv  otherInfinite.bgv  sendTreeExplicit.bgv  sendTreeMu.bgv
supplement/implementation/src/: args.rs  error_reporting.rs  freest.rs  fresh_var.rs  main.rs  parser.rs  pretty.rs  type_alias.rs  type_checker.rs  type_context.rs
supplement/implementation/src/util/: boxed.rs  mod.rs  peg_logos.rs  pretty.rs
tex/: TODO.md  drop-should-be-impure  popl2027-supplement.tex  popl2027.bib  popl2027.tex  proposal.agda  rules.tex
(+485 files in other folders)
